fixed news3 layout bug
git-svn-id: http://calpresstheme.googlecode.com/svn/trunk@148 a02837fa-88ba-2307-23dd-5b8dd1ba40a4

--- a/assets/css/calpress-base.css
+++ b/assets/css/calpress-base.css
@@ -826,6 +826,7 @@ body.front-layout-news #lead-story, body.front-layout-news #secondary-stories, b
     body.front-layout-news3 #tertiary-stories, body.front-layout-news3-alt #tertiary-stories{
         position: absolute;
         top: 0px;
+        margin-left: 320px;
     }
     
     body.front-layout-news3 #tertiary-stories>div, body.front-layout-news3-alt #tertiary-stories>div{
@@ -833,7 +834,6 @@ body.front-layout-news #lead-story, body.front-layout-news #secondary-stories, b
         margin-left: 0;
         float: none;
         position: relative;
-        left: 320px;
     }
     
     body.front-layout-news3 #tertiary-stories>div:first-child, body.front-layout-news3 #tertiary-stories>div:first-child{
